--- a/WebPageTest/wwwroot/IndexPage.htm
+++ b/WebPageTest/wwwroot/IndexPage.htm
@@ -9,6 +9,7 @@
     <title>{{ Title }}</title>
 </head>
 <body>
+<form>
     <section class="container">
         <div class="row">
             <div class="col-12 bg-dark text-white">
@@ -35,5 +36,6 @@
             </div>
         </div>
     </section>
+</form>
 </body>
 </html>
