--- a/WebPageTest/wwwroot/IndexPage.htm
+++ b/WebPageTest/wwwroot/IndexPage.htm
@@ -9,33 +9,35 @@
     <title>{{ Title }}</title>
 </head>
 <body>
-<form>
-    <section class="container">
-        <div class="row">
-            <div class="col-12 bg-dark text-white">
-                <h1 class="h4 py-3 px-5">{{ H1 }}</h1>
+    <form>
+        <section class="container">
+            <div class="row">
+                <div class="col-12 bg-dark text-white">
+                    <h1 class="h4 py-3 px-5">{{ H1 }}</h1>
+                </div>
             </div>
-        </div>
-    </section>
-    <section class="container">
-        <div class="row mt-3">
-            <div class="col-md-6">
-                {{ formTxt1 }}
-                {{ formBtn1 }}
+        </section>
+        <section class="container">
+            <div class="row mt-3">
+                <div class="col-md-6">
+                    {{ formTxt1 }}
+                    {{ formBtn1 }}
+                </div>
+                <div class="col-md-6">
+                    {{ formBtn2 }}
+                </div>
+                <div class="col-md-4 mt-4">
+                    {{ formCmb1 }}
+                </div>
             </div>
-            <div class="col-md-6">
-                {{ formBtn2 }}
+            <div class="row mt-3">
+                <div class="col-12">
+                    {{ fragmentAlert }}
+                </div>
             </div>
-            <div class="col-md-4 mt-4">
-                {{ formCmb1 }}
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-12">
-                {{ fragmentAlert }}
-            </div>
-        </div>
-    </section>
-</form>
+        </section>
+
+        {{ timer1 }}
+    </form>
 </body>
 </html>
