+ отдельная библиотека для Bootstrap 5 контролов

--- a/WebPageTest/wwwroot/IndexPage.htm
+++ b/WebPageTest/wwwroot/IndexPage.htm
@@ -21,7 +21,7 @@
             <div class="row mt-3">
                 <div class="col-md-6">
                     {{ formTxt1 }}
-                    {{ formBtn1 }}
+                    {{ formBtnBs1 }}
                 </div>
                 <div class="col-md-6">
                     {{ formBtn2 }}
