Добавлена возможность загрузки файлов через контрол FileUpload. Поддержка множественной загрузки файлов

--- a/WebPageTest/wwwroot/IndexPage.htm
+++ b/WebPageTest/wwwroot/IndexPage.htm
@@ -37,6 +37,14 @@
                 {{ fragmentAlert }}
             </div>
         </div>
+
+        <div class="row mt-3">
+            <div class="col-12">
+                {{ uploadAvatar }}
+                <br />
+                {{ btnUpload }}
+            </div>
+        </div>
     </section>
 
     {{ timer1 }}
